_docs/v0.55/embedding/sdk/api/snippets/StaticQuestionProps.md
---
version: v0.55
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: StaticQuestionProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/StaticQuestionProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                    | Type                                                                                                                                             | Description                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| :---------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="classname"></a> `className?`                         | `string`                                                                                                                                         | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                                |
| <a id="height"></a> `height?`                               | `Height`\<`string` \| `number`\>                                                                                                                 | A number or string specifying a CSS size value that specifies the height of the component                                                                                                                                                                                                                                                                                                                                                           |
| <a id="initialsqlparameters"></a> `initialSqlParameters?`   | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                              | Initial values for the SQL parameters.                                                                                                                                                                                                                                                                                                                                                                                                              |
| <a id="questionid"></a> `questionId`                        | `null` \| [`SdkQuestionId`](./api/SdkQuestionId)                                                                                              | The ID of the question. <br/> This is either: <br/> - The numerical ID when accessing a question link, e.g., `http://localhost:3000/question/1-my-question` where the ID is `1` <br/> - The `entity_id` key of the question object. You can find a question's Entity ID in the info panel when viewing a question <br/> - `new` to show the notebook editor for creating new questions. `isSaveEnabled` must be `true` to allow saving the question |
| <a id="style"></a> `style?`                                 | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579) | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                              |
| <a id="width"></a> `width?`                                 | `Width`\<`string` \| `number`\>                                                                                                                  | A number or string specifying a CSS size value that specifies the width of the component                                                                                                                                                                                                                                                                                                                                                            |
| <a id="withcharttypeselector"></a> `withChartTypeSelector?` | `boolean`                                                                                                                                        | -                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| <a id="withdownloads"></a> `withDownloads?`                 | `boolean`                                                                                                                                        | Enables the ability to download results in the interactive question.                                                                                                                                                                                                                                                                                                                                                                                |

<!-- [<endsnippet properties>] -->
